--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
         boss_diagonal_cooldown = 1500
         credits_y = HEIGHT
         level_start_time = 0
-        high_score = 0
-        high_score_name = ""
+        top_scores = []
         high_score_updated = False
 
         player_pos = [WIDTH // 2, HEIGHT - 2 * PLAYER_SIZE]
@@ -124,10 +123,11 @@
                 ctx.fillStyle = "white"
                 ctx.font = "bold 28px 'Press Start 2P'"
                 ctx.textAlign = "center"
-                ctx.fillText("Press Space to Play", WIDTH // 2, HEIGHT // 1.7)  # Moved slightly lower
-            if high_score_name:
+                ctx.fillText("Press Space to Play", WIDTH // 2, HEIGHT // 1.7)
+            if top_scores:
                 ctx.font = "24px 'Press Start 2P'"
-                ctx.fillText(f"High Score: {high_score_name} - {high_score}", WIDTH // 2, HEIGHT // 1.4)
+                for i, score in enumerate(top_scores):
+                    ctx.fillText(f"{i + 1}. {score['name']} - {score['score']}", WIDTH // 2, HEIGHT // 1.4 + 30 * i)
 
         def draw_level_title():
             ctx.clearRect(0, 0, WIDTH, HEIGHT)
@@ -223,8 +223,8 @@
             global showing_credits, credits_y
             showing_credits = True
             credits_y = HEIGHT
-            background_audio.pause()
             boss_audio.pause()
+            background_audio.play()
             window.setTimeout(animate_credits, 1000)
 
         def draw_credits():
@@ -257,9 +257,12 @@
         def show_final_score():
             global high_score_updated, showing_high_score_prompt
             high_score_updated = False
-            if score > high_score:
-                high_score_updated = True
-                showing_high_score_prompt = True
+            # Check if the player achieved a top 3 score
+            for i in range(len(top_scores)):
+                if score > top_scores[i]["score"]:
+                    high_score_updated = True
+                    showing_high_score_prompt = True
+                    break
             draw_final_score()
             if not high_score_updated:
                 window.setTimeout(reset_game, 3000)
@@ -372,11 +375,9 @@
             window.setTimeout(initialize_game, 1000)
 
         def start_game():
-            global showing_level_title, game_started, high_score, high_score_name
+            global showing_level_title, game_started
             showing_level_title = False
             game_started = True
-            high_score = int(window.localStorage.getItem("high_score") or 0)
-            high_score_name = window.localStorage.getItem("high_score_name") or ""
             initialize_game()
 
         def move_player(event):
@@ -402,14 +403,23 @@
             flash_text = not flash_text
 
         def prompt_high_score_name():
-            global showing_high_score_prompt, high_score, high_score_name
+            global showing_high_score_prompt, top_scores
             showing_high_score_prompt = False
             player_name = prompt("New High Score! Enter your name:")
-            high_score = score
-            high_score_name = player_name or "Anonymous"
-            window.localStorage.setItem("high_score", str(high_score))
-            window.localStorage.setItem("high_score_name", high_score_name)
+            player_name = player_name or "Anonymous"
+            top_scores.append({"name": player_name, "score": score})
+            top_scores = sorted(top_scores, key=lambda x: x["score"], reverse=True)[:3]
+            window.localStorage.setItem("top_scores", str(top_scores))
             window.setTimeout(reset_game, 3000)
+
+        def initialize_high_score():
+            global top_scores
+            stored_scores = window.localStorage.getItem("top_scores")
+            if stored_scores:
+                top_scores = eval(stored_scores)
+            if not top_scores:
+                top_scores = [{"name": "Player 1", "score": 100}, {"name": "Player 2", "score": 100}, {"name": "Player 3", "score": 100}]
+                window.localStorage.setItem("top_scores", str(top_scores))
 
         document.bind("keydown", move_player)
         window.setInterval(update, 30)
@@ -421,19 +431,8 @@
                 draw_start_screen()
                 window.requestAnimationFrame(lambda x: animate_title_screen())
 
-        def initialize_high_score():
-            global high_score, high_score_name
-            high_score = int(window.localStorage.getItem("high_score") or 0)
-            high_score_name = window.localStorage.getItem("high_score_name") or ""
-            if high_score == 0:
-                high_score = 1000
-                high_score_name = "Initial"
-                window.localStorage.setItem("high_score", str(high_score))
-                window.localStorage.setItem("high_score_name", high_score_name)
-
         initialize_high_score()
         animate_title_screen()
     </script>
 </body>
 </html>
-
