--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <audio id="background-audio" src="theme.mp3" loop></audio>
     <audio id="boss-audio" src="boss_theme.mp3" loop></audio>
     <script type="text/python">
-        from browser import document, html, window, timer
+        from browser import document, html, window
 
         WIDTH, HEIGHT = 800, 600
         PLAYER_SIZE = 50
