--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         boss_direction = 1
 
         spaceship_img = html.IMG(src="spaceship.png")
-        title_img = html.IMG(src="title.gif")
+        title_img = html.IMG(src="/mnt/data/title.gif")
         boss_img = html.IMG(src="boss.png")
         face_images = ["face_0.png", "face_1.png", "face_2.png", "face_3.png"]
         faces = [html.IMG(src=img) for img in face_images]
@@ -86,9 +86,6 @@
         ctx = canvas.getContext("2d")
         background_audio = document["background-audio"]
         boss_audio = document["boss-audio"]
-
-        title_frame = 0
-        title_frames = 25
 
         def initialize_game():
             global enemies, bullets, enemy_bullets, laser_beams, diagonal_shots, showing_level_title, ENEMY_SPEED, game_over, level, game_started, score, boss_hits, level_start_time
@@ -129,7 +126,7 @@
             move_stars()
             draw_stars()
             title_width, title_height = 800, 200
-            ctx.drawImage(title_img, title_frame * title_width, 0, title_width, title_height, (WIDTH - title_width) // 2, (HEIGHT // 3 - title_height // 2), title_width, title_height)
+            ctx.drawImage(title_img, (WIDTH - title_width) // 2, (HEIGHT // 3 - title_height // 2), title_width, title_height)
             if flash_text:
                 ctx.fillStyle = "white"
                 ctx.font = "bold 28px 'Press Start 2P'"
@@ -175,10 +172,6 @@
                 if star["y"] > HEIGHT:
                     star["y"] = 0
                     star["x"] = window.Math.random() * WIDTH
-
-        def update_title_frame():
-            global title_frame
-            title_frame = (title_frame + 1) % title_frames
 
         def draw():
             global game_over, game_started, showing_level_title, showing_credits, credits_y, showing_high_score_prompt
@@ -461,7 +454,6 @@
         window.setInterval(update, 30)
         window.setInterval(enemy_shoot, 500)
         window.setInterval(toggle_flash_text, 1000)
-        window.setInterval(update_title_frame, 120)
 
         def animate_title_screen():
             if not game_started:
