--- a/index.html
+++ b/index.html
@@ -445,19 +445,13 @@
 
         def initialize_high_score():
             global top_scores
-            stored_scores = window.localStorage.getItem("top_scores")
-            if stored_scores:
-                try:
-                    top_scores = window.JSON.parse(stored_scores)
-                except:
-                    top_scores = []
-            if not top_scores:
-                top_scores = [
-                    {"name": "Player 1", "score": 100},
-                    {"name": "Player 2", "score": 100},
-                    {"name": "Player 3", "score": 100}
-                ]
-                window.localStorage.setItem("top_scores", window.JSON.stringify(top_scores))
+            # Reset top scores to 100
+            top_scores = [
+                {"name": "Player 1", "score": 100},
+                {"name": "Player 2", "score": 100},
+                {"name": "Player 3", "score": 100}
+            ]
+            window.localStorage.setItem("top_scores", window.JSON.stringify(top_scores))
 
         document.bind("keydown", move_player)
         window.setInterval(update, 30)
