--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
 
         def prompt_high_score_name():
             global showing_high_score_prompt, top_scores
-            player_name = prompt("New High Score! Enter your name:")
+            player_name = window.prompt("New High Score! Enter your name:")
             player_name = player_name or "Anonymous"
             top_scores.append({"name": player_name, "score": score})
             top_scores = sorted(top_scores, key=lambda x: x["score"], reverse=True)[:3]
@@ -445,13 +445,19 @@
 
         def initialize_high_score():
             global top_scores
-            # Reset top scores to 100
-            top_scores = [
-                {"name": "Player 1", "score": 100},
-                {"name": "Player 2", "score": 100},
-                {"name": "Player 3", "score": 100}
-            ]
-            window.localStorage.setItem("top_scores", window.JSON.stringify(top_scores))
+            stored_scores = window.localStorage.getItem("top_scores")
+            if stored_scores:
+                try:
+                    top_scores = window.JSON.parse(stored_scores)
+                except:
+                    top_scores = []
+            if not top_scores:
+                top_scores = [
+                    {"name": "Player 1", "score": 100},
+                    {"name": "Player 2", "score": 100},
+                    {"name": "Player 3", "score": 100}
+                ]
+                window.localStorage.setItem("top_scores", window.JSON.stringify(top_scores))
 
         document.bind("keydown", move_player)
         window.setInterval(update, 30)
