--- a/index.html
+++ b/index.html
@@ -299,7 +299,10 @@
             if high_score_updated:
                 window.setTimeout(prompt_high_score_name, 2000)
             else:
-                window.setTimeout(show_credits, 3000)
+                if level > MAX_LEVELS:
+                    window.setTimeout(show_credits, 3000)
+                else:
+                    window.setTimeout(reset_game, 3000)
 
         def update():
             global game_over, score, game_started, showing_level_title, ENEMY_SPEED, boss_hits, boss_direction
