--- a/index.html
+++ b/index.html
@@ -171,6 +171,51 @@
             ctx.fillText(f"Final Score: {score}", WIDTH // 2, HEIGHT // 2)
             if high_score_updated:
                 ctx.fillText("New High Score!", WIDTH // 2, HEIGHT // 1.7)
+                draw_high_score_prompt()
+
+        def draw_high_score_prompt():
+            ctx.fillStyle = "white"
+            ctx.font = "24px 'Press Start 2P'"
+            ctx.textAlign = "center"
+            ctx.fillText("Enter your name:", WIDTH // 2, HEIGHT // 1.5)
+
+            input_box = document.createElement("input")
+            input_box.type = "text"
+            input_box.id = "player-name"
+            input_box.style.position = "absolute"
+            input_box.style.left = f"{WIDTH // 2 - 100}px"
+            input_box.style.top = f"{HEIGHT // 1.4}px"
+            input_box.style.width = "200px"
+            input_box.style.height = "30px"
+            input_box.style.fontSize = "20px"
+            input_box.style.fontFamily = "'Press Start 2P', cursive"
+            document.body.appendChild(input_box)
+
+            submit_button = document.createElement("button")
+            submit_button.id = "submit-name"
+            submit_button.style.position = "absolute"
+            submit_button.style.left = f"{WIDTH // 2 - 50}px"
+            submit_button.style.top = f"{HEIGHT // 1.3}px"
+            submit_button.style.width = "100px"
+            submit_button.style.height = "30px"
+            submit_button.innerHTML = "Submit"
+            submit_button.style.fontSize = "20px"
+            submit_button.style.fontFamily = "'Press Start 2P', cursive"
+            document.body.appendChild(submit_button)
+
+            def submit_name(event):
+                player_name = document["player-name"].value.strip()
+                if player_name:
+                    top_scores.append({"name": player_name, "score": score})
+                    top_scores.sort(key=lambda x: x["score"], reverse=True)
+                    top_scores = top_scores[:3]
+                    window.localStorage.setItem("top_scores", window.JSON.stringify(top_scores))
+                    document.body.removeChild(input_box)
+                    document.body.removeChild(submit_button)
+                    showing_high_score_prompt = False
+                    show_credits()
+
+            document["submit-name"].bind("click", submit_name)
 
         def draw_stars():
             ctx.fillStyle = "white"
@@ -204,7 +249,7 @@
             elif showing_final_score:
                 draw_final_score()
             elif showing_high_score_prompt:
-                prompt_high_score_name()
+                draw_high_score_prompt()
             else:
                 if not game_over:
                     ctx.drawImage(spaceship_img, player_pos[0], player_pos[1], PLAYER_SIZE, PLAYER_SIZE)
@@ -297,7 +342,8 @@
             showing_final_score = True
             draw_final_score()
             if high_score_updated:
-                window.setTimeout(prompt_high_score_name, 2000)
+                showing_high_score_prompt = True
+                draw_high_score_prompt()
             else:
                 if level > MAX_LEVELS:
                     window.setTimeout(show_credits, 3000)
@@ -440,22 +486,6 @@
         def toggle_flash_text():
             global flash_text
             flash_text = not flash_text
-
-        def prompt_high_score_name():
-            global showing_high_score_prompt, top_scores
-            while True:
-                player_name = window.prompt("New High Score! Enter your name:")
-                if player_name and player_name.strip():
-                    break
-            player_name = player_name.strip()
-            top_scores.append({"name": player_name, "score": score})
-            top_scores = sorted(top_scores, key=lambda x: x["score"], reverse=True)[:3]
-            window.localStorage.setItem("top_scores", window.JSON.stringify(top_scores))
-            showing_high_score_prompt = False
-            if level > MAX_LEVELS:
-                window.setTimeout(show_credits, 2000)
-            else:
-                window.setTimeout(reset_game, 3000)
 
         def initialize_high_score():
             global top_scores
