--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     showing_high_score_prompt = False
                     show_credits()
 
-            document["submit-name"].bind("click", submit_name)
+            submit_button.bind("click", submit_name)
 
         def draw_stars():
             ctx.fillStyle = "white"
