--- a/index.html
+++ b/index.html
@@ -29,12 +29,22 @@
         #title-img {
             animation: breathing 3s infinite;
         }
+        #player-name {
+            position: absolute;
+            left: calc(50% - 100px);
+            top: calc(70% - 15px);
+            width: 200px;
+            height: 30px;
+            font-size: 20px;
+            font-family: 'Press Start 2P', cursive;
+        }
     </style>
 </head>
 <body onload="brython()">
     <canvas id="game-canvas" width="800" height="600"></canvas>
     <audio id="background-audio" src="theme.mp3" loop></audio>
     <audio id="boss-audio" src="boss_theme.mp3" loop></audio>
+    <audio id="laser-audio" src="laser.mp3"></audio>
     <img id="title-img" src="title.gif" style="display:none">
     <script type="text/python">
         from browser import document, html, window
@@ -96,6 +106,7 @@
         ctx = canvas.getContext("2d")
         background_audio = document["background-audio"]
         boss_audio = document["boss-audio"]
+        laser_audio = document["laser-audio"]
 
         def initialize_game():
             global enemies, bullets, enemy_bullets, laser_beams, diagonal_shots, showing_level_title, ENEMY_SPEED, game_over, level, game_started, score, boss_hits, level_start_time
@@ -179,41 +190,30 @@
             ctx.textAlign = "center"
             ctx.fillText("Enter your name:", WIDTH // 2, HEIGHT // 1.5)
 
-            input_box = html.INPUT(type="text", Id="player-name", style={
-                "position": "absolute",
-                "left": f"{WIDTH // 2 - 100}px",
-                "top": f"{HEIGHT // 1.4}px",
-                "width": "200px",
-                "height": "30px",
-                "fontSize": "20px",
-                "fontFamily": "'Press Start 2P', cursive"
-            })
+            input_box = html.INPUT(type="text", Id="player-name")
+            input_box.style.position = "absolute"
+            input_box.style.left = f"{WIDTH // 2 - 100}px"
+            input_box.style.top = f"{HEIGHT // 1.4}px"
+            input_box.style.width = "200px"
+            input_box.style.height = "30px"
+            input_box.style.fontSize = "20px"
+            input_box.style.fontFamily = "'Press Start 2P', cursive"
             document <= input_box
 
-            submit_button = html.BUTTON("Submit", Id="submit-name", style={
-                "position": "absolute",
-                "left": f"{WIDTH // 2 - 50}px",
-                "top": f"{HEIGHT // 1.3}px",
-                "width": "100px",
-                "height": "30px",
-                "fontSize": "20px",
-                "fontFamily": "'Press Start 2P', cursive"
-            })
-            document <= submit_button
-
             def submit_name(event):
-                player_name = document["player-name"].value.strip()
-                if player_name:
-                    top_scores.append({"name": player_name, "score": score})
-                    top_scores.sort(key=lambda x: x["score"], reverse=True)
-                    top_scores = top_scores[:3]
-                    window.localStorage.setItem("top_scores", window.JSON.stringify(top_scores))
-                    document["player-name"].remove()
-                    document["submit-name"].remove()
-                    showing_high_score_prompt = False
-                    show_credits()
+                if event.keyCode == 13:  # Enter key
+                    player_name = input_box.value.strip()
+                    if player_name:
+                        top_scores.append({"name": player_name, "score": score})
+                        top_scores.sort(key=lambda x: x["score"], reverse=True)
+                        top_scores = top_scores[:3]
+                        window.localStorage.setItem("top_scores", window.JSON.stringify(top_scores))
+                        input_box.remove()
+                        showing_high_score_prompt = False
+                        show_credits()
 
-            submit_button.bind("click", submit_name)
+            input_box.bind("keydown", submit_name)
+            input_box.focus()
 
         def draw_stars():
             ctx.fillStyle = "white"
@@ -472,6 +472,7 @@
                 elif not showing_level_title and not game_over:
                     if current_time - player_last_shot > player_shot_cooldown:
                         bullets.append([player_pos[0] + PLAYER_SIZE // 2 - BULLET_WIDTH // 2, player_pos[1]])
+                        laser_audio.play()  # Play laser sound
                         player_last_shot = current_time
                 elif game_over:
                     reset_game()
