--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <audio id="explosion-audio" src="explosion.mp3"></audio>
     <img id="title-img" src="title.gif" style="display:none">
     <script type="text/python">
-        from browser import document, html, window
+        from browser import document, html, window, ajax
 
         WIDTH, HEIGHT = 800, 600
         PLAYER_SIZE = 50
@@ -227,7 +227,7 @@
                     top_scores.append({"name": player_name, "score": score})
                     top_scores.sort(key=lambda x: x["score"], reverse=True)
                     top_scores = top_scores[:3]
-                    window.localStorage.setItem("top_scores", window.JSON.stringify(top_scores))
+                    trigger_github_action(player_name, score)
                     form.remove()  # Remove the form from the DOM
                     showing_high_score_prompt = False  # Update the state variable
                     if level > MAX_LEVELS:
@@ -514,19 +514,41 @@
 
         def initialize_high_score():
             global top_scores
-            stored_scores = window.localStorage.getItem("top_scores")
-            if stored_scores:
-                try:
-                    top_scores = window.JSON.parse(stored_scores)
-                except:
-                    top_scores = []
-            if not top_scores:
-                top_scores = [
-                    {"name": "Player 1", "score": 100},
-                    {"name": "Player 2", "score": 100},
-                    {"name": "Player 3", "score": 100}
-                ]
-                window.localStorage.setItem("top_scores", window.JSON.stringify(top_scores))
+            req = ajax.ajax()
+            req.bind('complete', on_high_scores_fetched)
+            req.open('GET', 'https://raw.githubusercontent.com/your-github-username/your-repo-name/main/high_scores.json', True)
+            req.send()
+
+        def on_high_scores_fetched(req):
+            global top_scores
+            if req.status == 200 or req.status == 0:
+                top_scores = window.JSON.parse(req.text)
+            else:
+                console.error(f"Error fetching high scores: {req.status}")
+
+        def trigger_github_action(name, score):
+            token = 'YOUR_GITHUB_PERSONAL_ACCESS_TOKEN'  # Keep this secret!
+            headers = {
+                'Authorization': f'token {token}',
+                'Accept': 'application/vnd.github.v3+json'
+            }
+            data = {
+                'event_type': 'update-high-scores',
+                'client_payload': {
+                    'name': name,
+                    'score': score
+                }
+            }
+            req = ajax.ajax()
+            req.bind('complete', on_high_scores_saved)
+            req.open('POST', 'https://api.github.com/repos/your-github-username/your-repo-name/dispatches', True)
+            req.set_header('Authorization', f'token {token}')
+            req.set_header('Accept', 'application/vnd.github.v3+json')
+            req.send(window.JSON.stringify(data))
+
+        def on_high_scores_saved(req):
+            if req.status != 200:
+                console.error(f"Error saving high scores: {req.status}")
 
         document.bind("keydown", move_player)
         window.setInterval(update, 30)
