--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <audio id="explosion-audio" src="explosion.mp3"></audio>
     <img id="title-img" src="title.gif" style="display:none">
     <script type="text/python">
-        from browser import document, html, window, ajax, xmlhttprequest
+        from browser import document, html, window
 
         WIDTH, HEIGHT = 800, 600
         PLAYER_SIZE = 50
@@ -514,17 +514,17 @@
 
         def initialize_high_score():
             global top_scores
-            req = xmlhttprequest.XMLHttpRequest()
-            req.onreadystatechange = lambda event: on_high_scores_fetched(req)
-            req.open('GET', 'https://raw.githubusercontent.com/your-github-username/your-repo-name/main/high_scores.json', True)
-            req.send()
+            window.fetch('https://raw.githubusercontent.com/your-github-username/your-repo-name/main/high_scores.json').then(
+                lambda response: response.json()
+            ).then(
+                lambda data: update_high_scores(data)
+            ).catch(
+                lambda error: console.error(f"Error fetching high scores: {error}")
+            )
 
-        def on_high_scores_fetched(req):
+        def update_high_scores(data):
             global top_scores
-            if req.readyState == xmlhttprequest.DONE and (req.status == 200 or req.status == 0):
-                top_scores = window.JSON.parse(req.responseText)
-            else:
-                console.error(f"Error fetching high scores: {req.status}")
+            top_scores = data
 
         def trigger_github_action(name, score):
             token = 'YOUR_GITHUB_PERSONAL_ACCESS_TOKEN'  # Keep this secret!
@@ -539,16 +539,15 @@
                     'score': score
                 }
             }
-            req = xmlhttprequest.XMLHttpRequest()
-            req.onreadystatechange = lambda event: on_high_scores_saved(req)
-            req.open('POST', 'https://api.github.com/repos/your-github-username/your-repo-name/dispatches', True)
-            req.setRequestHeader('Authorization', f'token {token}')
-            req.setRequestHeader('Accept', 'application/vnd.github.v3+json')
-            req.send(window.JSON.stringify(data))
-
-        def on_high_scores_saved(req):
-            if req.readyState == xmlhttprequest.DONE and req.status != 200:
-                console.error(f"Error saving high scores: {req.status}")
+            window.fetch('https://api.github.com/repos/your-github-username/your-repo-name/dispatches', {
+                'method': 'POST',
+                'headers': headers,
+                'body': window.JSON.stringify(data)
+            }).then(
+                lambda response: console.log("High score submitted")
+            ).catch(
+                lambda error: console.error(f"Error saving high scores: {error}")
+            )
 
         document.bind("keydown", move_player)
         window.setInterval(update, 30)
